fix: fixed overflows in small screens and some other minor style fixes.

--- a/src/app/products/_components/product-card.module.scss
+++ b/src/app/products/_components/product-card.module.scss
@@ -2,10 +2,12 @@
   margin-bottom: 16px;
   padding: 1rem;
   position: relative;
-  overflow: hidden;
 
   display: grid;
-  grid-template-columns: 110px 1fr;
+  grid-template-columns: 110px calc(100% - 110px);
+  @media (max-width: 400px) {
+    grid-template-columns: 60px calc(100% - 60px);
+  }
   gap: 4px;
 
   border-radius: 0.5rem;
@@ -46,6 +48,7 @@
 }
 
 .cardDescription {
+  direction: ltr;
   display: -webkit-box;
   -webkit-line-clamp: 2;
   line-clamp: 2;
@@ -54,6 +57,8 @@
   white-space: pre-wrap;
 
   margin-bottom: 16px;
+  overflow-x: auto;
+  max-width: 90%;
 }
 
 .priceLineThrough {
