--- a/src/app/styles.scss
+++ b/src/app/styles.scss
@@ -43,8 +43,8 @@ body {
   height: 100%;
   margin: 0 auto;
 
-  width: 100dvw;
-  height: 100dvh;
+  // width: 100dvw;
+  // height: 100dvh;
 }
 
 @font-face {
